--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   /* variables */
   --cg-black: rgb(30, 32, 32);
-  --cg-blue: rgb(36, 94, 255);
+  --cg-blue: rgb(216, 119, 231);
   --cg-grey: rgb(243, 243, 243);
   --cg-white: rgb(255, 255, 255);
 }
@@ -11,7 +11,11 @@ html {
 }
 
 body {
-  background: var(--cg-grey);
+  background-image: url('animeWP.jpeg');
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
+  
   position: relative;
   min-height: 100vh;
   padding: 0;
@@ -34,7 +38,7 @@ body {
   align-items: center;
   text-align: center;
 
-  background-color: var(--cg-black);
+  background-color: rgba(0, 0, 0, 0.8);
   color: var(--cg-white);
   padding: 0px 0px;
 
@@ -95,75 +99,58 @@ main {
   font-family: Georgia;
 }
 
-/* CSS for portfolio grid */
+  /* CSS for portfolio grid */
+  
 
-.project {
-  display: flex;
-  flex-direction: row;
-  max-width: 100%;
-  margin: 1em 0 2em 0;
+  
+  .item-link {
+    width: 70%;
+  
+    /* Debug border */
+    /* border: 2px solid red; */
+  }
+  /* Portfolio grid styling */
 
-  /* Debug border */
-  /* border: 2px solid blue; */
-}
 
-.item-link {
-  width: 70%;
-
-  /* Debug border */
-  /* border: 2px solid red; */
+  .project {
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    max-width: 70%;
+    margin: 1em 0 2em 0;
+    background: 
+    linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
+    linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+    /* border: 2px solid blue; */
+    padding: 20px;
 }
 
 .project-image {
-  object-fit: cover;
-  width: 100%;
-  height: 500px;
-  flex-basis: 50px;
-  flex-grow: 2;
-
-  /* Debug border */
-  /* border: 2px solid black; */
+  
+  text-align: center; /* Center the content horizontally within the .project-image container */
 }
 
+.project-image img {
+  
+  max-width: 70%; /* Set the width to 100% to make the image extend to the end */
+  height: auto; /* Allow the height to adjust automatically based on the aspect ratio */
+  /* Debug border */
+}
 .project-details {
-  display: flex;
-  background-color: var(--cg-white);
-  width: 30%;
-  height: 500px;
-  flex-shrink: 1;
-  padding: 0 20px;
-  margin: 0px;
-  line-height: 1.5;
-  overflow: scroll;
-
-  flex-direction: column;
   text-align: center;
-  justify-content: center;
-
-  /* Debug border */
-  /* border: 2px solid green; */
+  color: white;
+  
 }
-
 .project-details a {
-  color: var(--cg-black);
-  text-decoration: none;
-  font-weight: bold;
-  letter-spacing: 1px;
+  color: rgb(216, 119, 231); /* Change 'your-desired-color' to the color you want */
+  text-decoration: none; /* Optional: Remove underline */
+  font-weight: bold; /* Optional: Add font weight if needed */
 }
 
-.project-details a:hover {
-  color: var(--cg-blue);
-  text-decoration: underline;
-}
 
-.project-details {
-  font-weight: lighter;
-}
 
-.project-name {
-  font-weight: bold;
-  font-size: 20px;
-}
+
+
+
 
 /* CSS for home page */
 
@@ -172,9 +159,9 @@ main {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  background-color: #f8f8f8;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent);
+  color: white;
+  padding-bottom: 10%;
   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
@@ -201,6 +188,18 @@ main {
 
 /* CSS for resume page */
 
+.resume {
+  background-color: rgba(0, 0, 0, 0.7);
+  margin: 40px;
+}
+
+.section {
+
+  margin:40px;
+  padding: 20px;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent);
+  color: white;
+}
 .button {
   background-color: var(--cg-black);
   border: none;
@@ -255,7 +254,7 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--cg-black);
+  background-color: rgba(0, 0, 0, 0.8);
   color: var(--cg-white);
   position: absolute;
   bottom: 0;
